@startuml
class moves.RockSlide {
# String describe()
+ void applyOppEffects(Pokemon)
}
class pockemons.Pichu {
}
class moves.Rest {
# String describe()
+ void applySelfEffects(Pokemon)
}
class pockemons.Raichu {
}
class moves.PowderSnow {
# String describe()
+ void applyOppEffects(Pokemon)
}
class moves.Agility {
# String describe()
+ void applySelfEffects(Pokemon)
}
class pockemons.Pikachu {
}
class moves.FireFang {
# String describe()
+ void applyOppEffects(Pokemon)
}
class moves.ChargeBeam {
# String describe()
+ void applySelfEffects(Pokemon)
}
class pockemons.Entei {
}
class moves.ThunderWave {
# String describe()
}
class pockemons.Amaura {
}
class moves.StoneEdge {
# String describe()
+ void applySelfEffects(Pokemon)
}
class pockemons.Aurorus {
}
class moves.SacredFire {
# String describe()
+ void applyOppEffects(Pokemon)
}
class moves.Stomp {
# String describe()
+ void applyOppEffects(Pokemon)
}
class Main {
+ {static} void main(String[])
}
class moves.Psychic {
# String describe()
+ void applyOppEffects(Pokemon)
}
class moves.Facade {
# String describe()
+ void applyOppDamage(Pokemon,double)
}


moves.PhysicalMove <|-- moves.RockSlide
pockemons.Pokemon <|-- pockemons.Pichu
moves.StatusMove <|-- moves.Rest
pockemons.Pikachu <|-- pockemons.Raichu
moves.SpecialMove <|-- moves.PowderSnow
moves.StatusMove <|-- moves.Agility
pockemons.Pichu <|-- pockemons.Pikachu
moves.PhysicalMove <|-- moves.FireFang
moves.SpecialMove <|-- moves.ChargeBeam
ru.ifmo.se.pokemon.Pokemon <|-- pockemons.Entei
moves.StatusMove <|-- moves.ThunderWave
pockemons.Pokemon <|-- pockemons.Amaura
moves.PhysicalMove <|-- moves.StoneEdge
pockemons.Amaura <|-- pockemons.Aurorus
moves.PhysicalMove <|-- moves.SacredFire
moves.PhysicalMove <|-- moves.Stomp
moves.SpecialMove <|-- moves.Psychic
moves.PhysicalMove <|-- moves.Facade
@enduml